# v

./: changelog.txt  make.sh  pyproject.toml
docs/: console.md  installation.md
src/0.1/: README.md
src/0.2/: pyproject.toml
src/1.3/: test.py
src/latest/: pyproject.toml
src/test/: test.py
